Add comprehensive SEO meta tags and Open Graph data to index.html for better search visibility and social sharing

--- a/index.html
+++ b/index.html
@@ -4,7 +4,45 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/sahand-avatar.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sahand Namvar's Portfolio</title>
+
+    <title>Sahand N. | Full-Stack Developer & CS Master’s Student</title>
+
+    <meta
+      name="description"
+      content="Portfolio of Sahand Namvar — Full-stack developer and CS Master's student passionate about building modern web applications, teaching tech, and crafting impactful software."
+    />
+
+    <!-- Open Graph / Facebook -->
+    <meta
+      property="og:title"
+      content="Sahand N. | Full-Stack Developer & CS Master’s Student"
+    />
+    <meta
+      property="og:description"
+      content="Explore projects, skills, and contact info of Sahand Namvar, a passionate developer and university lab instructor."
+    />
+    <meta property="og:url" content="https://www.sahandnamvar.com/" />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:image"
+      content="https://www.sahandnamvar.com/sahandnamvar.jpg"
+    />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="Sahand N. | Full-Stack Developer & CS Master’s Student"
+    />
+    <meta
+      name="twitter:description"
+      content="Portfolio of Sahand Namvar, building modern web applications and teaching tech."
+    />
+    <meta
+      name="twitter:image"
+      content="https://www.sahandnamvar.com/your-og-image.jpg"
+    />
+
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
