Minor changes in SEO

--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
     <link rel="icon" type="image/svg+xml" href="/sahand-avatar.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Sahand N. | Full-Stack Developer & CS Master’s Student</title>
+    <title>Sahand Namvar | Full-Stack Developer & CS Master’s Student</title>
 
     <meta
       name="description"
-      content="Portfolio of Sahand Namvar — Full-stack developer and CS Master's student passionate about building modern web applications, teaching tech, and crafting impactful software."
+      content="Portfolio of Sahand Namvar — Full-stack developer and Computer Science Master's student passionate about building modern web applications, teaching tech, and crafting impactful software."
     />
 
     <!-- Open Graph / Facebook -->
     <meta
       property="og:title"
-      content="Sahand N. | Full-Stack Developer & CS Master’s Student"
+      content="Sahand Namvar | Full-Stack Developer & CS Master’s Student"
     />
     <meta
       property="og:description"
@@ -32,7 +32,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta
       name="twitter:title"
-      content="Sahand N. | Full-Stack Developer & CS Master’s Student"
+      content="Sahand Namvar | Full-Stack Developer & CS Master’s Student"
     />
     <meta
       name="twitter:description"
@@ -40,7 +40,7 @@
     />
     <meta
       name="twitter:image"
-      content="https://www.sahandnamvar.com/your-og-image.jpg"
+      content="https://www.sahandnamvar.com/sahandnamvar.jpg"
     />
 
     <link
